--- a/content/TOC.yaml
+++ b/content/TOC.yaml
@@ -1,4 +1,8 @@
 - Introduction
+- First steps
+  - Starting with layouting
+  - Starting with Scribus
+  - Converting to Scribus
 - Scripting
   - Running a script
   - Writing a script
