--- a/content/TOC.yaml
+++ b/content/TOC.yaml
@@ -67,8 +67,10 @@
   - Exporting for other software
   - Merging files (PDFs or .SLA)
 - Printing and PDFs
+  - Preview your work
   - Printing from Scribus
   - Exporting to PDF
+  - Printing from PDF
   - PDF versions
   - The preflight verifier
   - Embedding the fonts
