--- a/content/TOC.yaml
+++ b/content/TOC.yaml
@@ -48,6 +48,7 @@
 - Lines and borders
 - Colors
   - Adding colors
+  - CMYK, RGB and spot colors
   - Border and fill
   - Text color
   - The color wheel
