--- a/content/TOC.yaml
+++ b/content/TOC.yaml
@@ -49,6 +49,7 @@
 - Colors
   - Adding colors
   - CMYK, RGB and spot colors
+  - Overprinting
   - Border and fill
   - Text color
   - The color wheel
