--- a/content/TOC.yaml
+++ b/content/TOC.yaml
@@ -4,6 +4,10 @@
   - Starting with Scribus
   - Learning to layout
   - Switching to Scribus
+- Improve your skills
+  - Getting faster
+  - Be accurate
+  - Work with others
 - The user interface
   - The menues
   - The toolbar
