--- a/content/TOC.yaml
+++ b/content/TOC.yaml
@@ -64,7 +64,7 @@
 - Fonts
   - Bold and italics
   - Adding fonts
-- Hyphenation and spelling check
+- Hyphenation and spelling
 - Tables and tabulators
 - Formulas, Latex and render frames
 - Collaborating
