--- a/content/TOC.yaml
+++ b/content/TOC.yaml
@@ -7,6 +7,7 @@
 - Improve your skills
   - Getting faster
   - Be accurate
+  - Typography
   - Work with others
 - The user interface
   - The menues
