--- a/content/TOC.yaml
+++ b/content/TOC.yaml
@@ -8,6 +8,7 @@
   - Getting faster
   - Be accurate
   - Typography
+  - Deliver a good PDF
   - Work with others
 - The user interface
   - The menues
